# pylerplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  noxfile.py  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  onCreateCommand.sh
.githooks/: pre-commit
scripts/: install_meta_packages.sh  prune.sh
