[build-system]
requires = ["setuptools>=43.0.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["readme"]
name = "mypackage"             # TODO: replace with project name
version = "0.0.0"              # TODO: replace with initial version
license = { file = "LICENSE" }
description = ""               # TODO: add description
keywords = []                  # TODO: add keywords
classifiers = []               # TODO: add classifiers
authors = []                   # TODO: add authors
maintainers = []               # TODO: add maintainers or remove
requires-python = ">=3.8"      # TODO: lock python version to desired MAJOR.MINOR
dependencies = []              # TODO: add required dependencies

[project.optional-dependencies]

[project.urls]
# Documentation = "" # TODO: add URL or remove
# Repository = ""    # TODO: add URL or remove

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.mypy]
implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
allow_redefinition = true
local_partial_types = true
strict_equality = true
install_types = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Allow public structures without docstrings
    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D102", # undocumented-public-method
    "D103", # undocumented-public-function
    "D104", # undocumented-public-package
    "D105", # undocumented-magic-method
    "D106", # undocumented-public-nested-class
    "D107", # undocumented-public-init
    # Allow print statements
    "T20", # flake8-print
    # Ignore rules fixed by the formatter
    "COM812", # missing-trailing-comma
]

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"*.ipynb" = [
    # Allow public structures without docstrings
    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D102", # undocumented-public-method
    "D103", # undocumented-public-function
    "D104", # undocumented-public-package
    "D105", # undocumented-magic-method
    "D106", # undocumented-public-nested-class
    "D107", # undocumented-public-init
    # Allow print statements
    "T20", # flake8-print
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true

[tool.ruff.lint.pydocstyle]
convention = "google"
