[project]
dynamic = ["readme"]
name = "mypackage"             # TODO: replace with project name
version = "0.0.0"              # TODO: replace with initial version
license = { file = "LICENSE" }
description = ""               # TODO: add description
keywords = []                  # TODO: add keywords
classifiers = []               # TODO: add classifiers from <https://pypi.org/classifiers/>
authors = []                   # TODO: add authors
maintainers = []               # TODO: add maintainers or remove field
requires-python = ">=3.12"     # TODO: lock python version requirements
dependencies = []

[dependency-groups]
dev = ["nox>=2025.11.12"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.ruff]
extend-include = ["tests/**/*.py", "noxfile.py"]
fix = true

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Allow public structures without docstrings
    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D102", # undocumented-public-method
    "D103", # undocumented-public-function
    "D104", # undocumented-public-package
    "D105", # undocumented-magic-method
    "D106", # undocumented-public-nested-class
    "D107", # undocumented-public-init
    # Ignore rules fixed by the formatter
    "COM812", # missing-trailing-comma
]
task-tags = ["HACK"]

[tool.ruff.lint.extend-per-file-ignores]
"*.ipynb" = [
    # Allow public structures without docstrings
    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D102", # undocumented-public-method
    "D103", # undocumented-public-function
    "D104", # undocumented-public-package
    "D105", # undocumented-magic-method
    "D106", # undocumented-public-nested-class
    "D107", # undocumented-public-init
    # Allow print statements
    "T20", # flake8-print
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyrefly]
project-includes = ["src", "tests", "noxfile.py"]
