[project]
dynamic = ["readme"]
name = "mypackage"             # TODO: replace with project name
version = "0.0.0"              # TODO: replace with initial version
license = { file = "LICENSE" }
description = ""               # TODO: add description
keywords = []                  # TODO: add keywords
classifiers = []               # TODO: add classifiers from <https://pypi.org/classifiers/>
authors = []                   # TODO: add authors
maintainers = []               # TODO: add maintainers or remove field
requires-python = ">=3.12"     # TODO: lock python version requirements
dependencies = []

[dependency-groups]
dev = []

[tool.codespell]
ignore-words = ".codespell-ignore"

[tool.pyrefly]
project-includes = ["src", "tests", "noxfile.py"]

[tool.ruff]
extend-include = ["tests/**/*.py", "noxfile.py"]
fix = true

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [

    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D102", # undocumented-public-method
    "D103", # undocumented-public-function
    "D104", # undocumented-public-package
    "D105", # undocumented-magic-method
    "D106", # undocumented-public-nested-class
    "D107", # undocumented-public-init

    # --- Recommended by Ruff (Formatter Compatibility) ---
    # These rules are disabled to avoid conflicts with the Ruff formatter.
    # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "D206",   # docstring-tab-indentation
    "D300",   # triple-single-quotes
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "Q004",   # unnecessary-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "ISC001", # recommended to disable to avoid conflicts with formatter
    "ISC002", # multi-line-implicit-string-concatenation

]
task-tags = ["HACK"]

[tool.ruff.lint.extend-per-file-ignores]
"**/*.ipynb" = [

    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D102", # undocumented-public-method
    "D103", # undocumented-public-function
    "D104", # undocumented-public-package
    "D105", # undocumented-magic-method
    "D106", # undocumented-public-nested-class
    "D107", # undocumented-public-init
    "T201", # print
    "T203", # pprint
]
"tests/**.py" = [
    "D100",    # undocumented-public-module
    "D101",    # undocumented-public-class
    "D102",    # undocumented-public-method
    "D103",    # undocumented-public-function
    "D104",    # undocumented-public-package
    "D105",    # undocumented-magic-method
    "D106",    # undocumented-public-nested-class
    "D107",    # undocumented-public-init
    "S101",    # assert
    "PLR2004", # magic-value-comparison
    "ANN",     # flake8-annotations
    "INP001",  # implicit-namespace-package
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.tox]
requires = ["tox-uv"]
env_list = ["lint", { product = [["typecheck"], ["py312", "py313", "py314"]] }]

[tool.tox.env.lint]
description = "Lint: Ruff"
no_package = true
deps = "ruff"
commands = [["ruff", "check", "."], ["ruff", "format", "--check", "."]]

[tool.tox.env.typecheck]
description = "Type: Pyrefly"
deps = "pyrefly"
commands = [["python", "-m", "pyrefly", "check"]]
